Fix spacing on headers

--- a/global.css
+++ b/global.css
@@ -52,6 +52,10 @@ code {
   font-family: 'Consolas', 'Courier New', Courier, monospace;
 }
 
+h1 {
+  font-size: 2.5em;
+}
+
 h1,
 h2,
 h3,
@@ -180,16 +184,13 @@ nav {
   background: var(--secondary);
 }
 
-.page-header {
-  font-size: 2.5em;
-}
-
 .header-icon-container {
   display: flex;
   align-items: center;
 }
 
-.header-icon-container .page-header {
+.header-icon-container h1,
+.header-icon-container h2 {
   margin-right: 16px;
 }
 
